--- a/src/index.css
+++ b/src/index.css
@@ -107,8 +107,10 @@ code {
 #map {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 .leaflet-container {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
